--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-flask==3.0.0
-flask-cors==4.0.0
-numpy==1.26.2
-pandas==2.1.4
-scikit-learn==1.3.2
+fastapi==0.120.4
+uvicorn[standard]==0.38.0
+pandas==2.3.3
+numpy==2.3.4
+scikit-learn==1.7.2
+lightgbm==4.6.0
+python-multipart==0.0.20
+jinja2==3.1.6
+
