--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-analysis/model_outputs/*.txt binary
-data/*.csv filter=lfs diff=lfs merge=lfs -text
-data/*.json filter=lfs diff=lfs merge=lfs -text
+﻿analysis/model_outputs/*.txt binary
